Added local distribution

--- a/pom.xml
+++ b/pom.xml
@@ -242,5 +242,10 @@
 			</repositories>
 		</profile>
 	</profiles>
-
+	<distributionManagement>
+		<repository>
+			<id>internal</id>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
 </project>
